# apps/server/api/openapi/server-openapi.yaml
@@ -655,19 +655,17 @@ components:
 
     ModuleConfig:
       type: object
-      required: [module_name, enabled, description]
+      required: [module_name, tool_id, enabled]
       properties:
         module_name:
           type: string
-        enabled:
-          type: boolean
         description:
           type: string
-        enabled_tools:
-          type: array
-          items:
-            type: string
           nullable: true
+        tool_id:
+          type: string
+        enabled:
+          type: boolean
 
     UpsertToolSettingsBody:
       type: object
