# apps/server/internal/ogenserver/gen/oas_validators_gen.go
@@ -7,36 +7,6 @@ import (
 	"github.com/ogen-go/ogen/validate"
 )
 
-func (s *ModuleConfig) Validate() error {
-	if s == nil {
-		return validate.ErrNilPointer
-	}
-
-	var failures []validate.FieldError
-	if err := func() error {
-		if value, ok := s.EnabledTools.Get(); ok {
-			if err := func() error {
-				if value == nil {
-					return errors.New("nil is invalid value")
-				}
-				return nil
-			}(); err != nil {
-				return err
-			}
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "enabled_tools",
-			Error: err,
-		})
-	}
-	if len(failures) > 0 {
-		return &validate.Error{Fields: failures}
-	}
-	return nil
-}
-
 func (s *UpsertToolSettingsBody) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
